# zero

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
cmake/: zero-config.cmake.in
include/: interface.h  log.h  singleton.h
include/filesystem/: directory.h  path.h
include/strings/: str.h  string.h
include/time/: date.h
include/zero/: cmdline.h  defer.h  env.h  error.h  expect.h  filesystem.h  formatter.h  log.h  singleton.h  strings.h  thread.h  try.h  utility.h
include/zero/async/: coroutine.h  promise.h
include/zero/atomic/: circular_buffer.h  event.h
include/zero/cache/: lru.h
include/zero/chrono/: date.h
include/zero/concurrent/: channel.h
include/zero/detail/: type_traits.h
include/zero/encoding/: base64.h  hex.h
include/zero/filesystem/: directory.h  file.h  fs.h  path.h  std.h
include/zero/io/: binary.h  buffer.h  io.h
include/zero/meta/: concepts.h  type_traits.h
include/zero/os/: net.h  os.h  process.h  procfs.h  resource.h  stat.h
include/zero/os/darwin/: error.h  process.h
include/zero/os/linux/: process.h
include/zero/os/linux/procfs/: process.h  procfs.h
include/zero/os/macos/: error.h  process.h
include/zero/os/nt/: error.h  process.h
include/zero/os/procfs/: process.h  procfs.h
include/zero/os/unix/: error.h
include/zero/os/windows/: error.h  process.h
include/zero/proc/: process.h
include/zero/ptr/: ref.h
include/zero/sh/: shell.h
include/zero/shell/: shell.h
include/zero/strings/: string.h  strings.h
include/zero/time/: date.h  time.h
include/zero/traits/: type_traits.h
src/: cmdline.cpp  env.cpp  filesystem.cpp  log.cpp  strings.cpp  utility.cpp
src/async/: coroutine.cpp  promise.cpp
src/atomic/: event.cpp
src/chrono/: date.cpp
src/concurrent/: channel.cpp
src/encoding/: base64.cpp  hex.cpp
src/filesystem/: directory.cpp  file.cpp  fs.cpp  path.cpp  std.cpp
src/io/: buffer.cpp  io.cpp
src/os/: net.cpp  os.cpp  process.cpp  procfs.cpp  resource.cpp  stat.cpp
src/os/darwin/: error.cpp  process.cpp
src/os/linux/: process.cpp
src/os/linux/procfs/: process.cpp  procfs.cpp
src/os/macos/: error.cpp  process.cpp
src/os/nt/: error.cpp  process.cpp
src/os/procfs/: process.cpp  procfs.cpp
src/os/windows/: error.cpp  process.cpp
src/proc/: process.cpp
src/sh/: shell.cpp
src/shell/: shell.cpp
src/strings/: str.cpp  string.cpp  strings.cpp
src/time/: date.cpp  time.cpp
test/: CMakeLists.txt  catch_extensions.h  cmdline.cpp  defer.cpp  env.cpp  error.cpp  expect.cpp  filesystem.cpp  formatter.cpp  log.cpp  strings.cpp  try.cpp  utility.cpp
test/async/: coroutine.cpp  promise.cpp
test/async/coroutine/: error.cpp  exception.cpp
test/atomic/: circular_buffer.cpp  event.cpp
test/cache/: lru.cpp
test/concurrent/: channel.cpp
test/detail/: type_traits.cpp
test/encoding/: base64.cpp  hex.cpp
test/filesystem/: file.cpp  fs.cpp  std.cpp
test/io/: binary.cpp  buffer.cpp  io.cpp
test/meta/: concepts.cpp  type_traits.cpp
test/os/: net.cpp  os.cpp  process.cpp  procfs.cpp  resource.cpp  stat.cpp
test/os/darwin/: error.cpp  process.cpp
test/os/linux/: process.cpp
test/os/linux/procfs/: process.cpp  procfs.cpp
test/os/macos/: error.cpp  process.cpp
test/os/nt/: error.cpp  process.cpp
test/os/procfs/: process.cpp
test/os/unix/: error.cpp
test/os/windows/: error.cpp  process.cpp
test/ptr/: ref.cpp
test/strings/: strings.cpp
test/traits/: type_traits.cpp
